# 01-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  _typos.toml  cliff.toml  deny.toml
fixtures/: b64.txt  blake3.txt  ed25519_private.txt  ed25519_public.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/opt/: base64.rs  csv.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  text.rs
