[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
structopt = "0.3.26"
serde = { version = "1.0.198", features = ["derive"] }
anyhow = "1.0.82"
serde_json = "1.0.116"
