[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
structopt = "0.3.26"
serde = { version = "1.0.198", features = ["derive"] }
anyhow = "1.0.82"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
rand = "0.8.5"
zxcvbn = "2.2.2"
base64 = "0.22.0"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
chacha20poly1305 = "0.10.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
